--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,17 +6,325 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>519</width>
+    <height>133</height>
    </rect>
   </property>
-  <property name="windowTitle">
-   <string>MainWindow</string>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
-  <widget class="QMenuBar" name="menubar"/>
-  <widget class="QStatusBar" name="statusbar"/>
+  <property name="minimumSize">
+   <size>
+    <width>519</width>
+    <height>133</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>519</width>
+    <height>133</height>
+   </size>
+  </property>
+  <property name="windowTitle">
+   <string>XM2INC</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">*{
+	background:rgb(255,255,255);
+}
+
+#processPushButton
+{
+	background:rgb(0,133,252);
+	border-radius:8px;
+	font-size:15px;
+	font-family:Century Gothic, sans-serif;
+	color:rgb(255,255,255);
+}
+
+#processPushButton:pressed
+{
+	background:rgb(0,122,228);
+	border-radius:8px;
+	font-size:15px;
+	font-family:Century Gothic, sans-serif;
+	color:rgb(255,255,255);
+}
+
+#processPushButton:disabled
+{
+	background:rgb(143,188,228);
+	border-radius:8px;
+	font-size:15px;
+	font-family:Century Gothic, sans-serif;
+	color:rgb(255,255,255);
+}
+
+QLineEdit
+{
+	background:rgb(252,252,252);
+	border-radius:4px;
+	border: 1px solid #717072;
+}
+
+QGroupBox
+{
+	font-family:Century Gothic, sans-serif;
+}
+
+QToolButton
+{
+	border-radius:4px;
+	border:1px solid #717072;
+	font-size:15px;
+	font-family:Century Gothic, sans-serif;
+}
+
+#inputPushButton
+{
+	background:rgb(0,133,252);
+	border-radius:4px;
+	font-size:15px;
+	font-family:Century Gothic, sans-serif;
+	color:rgb(255,255,255);
+}
+
+#outputPushButton
+{
+	background:rgb(0,133,252);
+	border-radius:4px;
+	font-size:15px;
+	font-family:Century Gothic, sans-serif;
+	color:rgb(255,255,255);
+}
+
+QLabel
+{
+	font-size:12px;
+	font-family:Century Gothic, sans-serif;
+}
+
+QRadioButton
+{
+	font-size:12px;
+	font-family:Century Gothic, sans-serif;
+}</string>
+  </property>
+  <widget class="QWidget" name="centralwidget">
+   <layout class="QGridLayout" name="gridLayout_2">
+    <item row="0" column="1" rowspan="2">
+     <widget class="QGroupBox" name="settingsGroupBox">
+      <property name="title">
+       <string>Settings</string>
+      </property>
+      <layout class="QGridLayout" name="gridLayout">
+       <item row="0" column="0">
+        <layout class="QVBoxLayout" name="verticalLayout">
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_3">
+           <item>
+            <widget class="QRadioButton" name="XMRadioButton">
+             <property name="text">
+              <string>From XM file</string>
+             </property>
+             <property name="checked">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QToolButton" name="XMToolButton">
+             <property name="text">
+              <string>?</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_2">
+           <item>
+            <widget class="QRadioButton" name="HEXRadioButton">
+             <property name="text">
+              <string>From raw HEX</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QToolButton" name="HEXToolButton_2">
+             <property name="text">
+              <string>?</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout_2">
+        <item>
+         <widget class="QLabel" name="inputLabel">
+          <property name="text">
+           <string>Input file</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="outputLabel">
+          <property name="text">
+           <string>Output file</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout_3">
+        <item>
+         <widget class="QLineEdit" name="inputLineEdit"/>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="outputLineEdit"/>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout_4">
+        <item>
+         <widget class="QPushButton" name="inputPushButton">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>18</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>18</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="outputPushButton">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>18</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>18</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </item>
+    <item row="1" column="0">
+     <widget class="QPushButton" name="processPushButton">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>25</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>Convert</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+   <zorder>settingsGroupBox</zorder>
+   <zorder>processPushButton</zorder>
+   <zorder>inputLineEdit</zorder>
+   <zorder>outputLineEdit</zorder>
+   <zorder>inputLabel</zorder>
+   <zorder>outputLabel</zorder>
+   <zorder></zorder>
+  </widget>
+  <widget class="QMenuBar" name="menubar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>519</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionAbout"/>
+    <addaction name="separator"/>
+    <addaction name="actionExit"/>
+   </widget>
+   <addaction name="menuFile"/>
+  </widget>
+  <action name="actionExit">
+   <property name="text">
+    <string>Exit</string>
+   </property>
+  </action>
+  <action name="actionAbout">
+   <property name="text">
+    <string>About</string>
+   </property>
+  </action>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>actionExit</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>259</x>
+     <y>76</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
